[package]
name = "cq_eve_jita"
version = "0.1.0"
authors = ["glider110 <1026316503@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[profile.dev]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = {version="2.2.1"}
websocket={version="0.26.5"}
serde_json = "1.0.85"
crossbeam ="0.8.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
num-format = "0.4.0"
regex = "1"
strsim = "0.10.0"